test/lattests/extensions/objects1/bad/redefinedFieldFromBase.lat
class a {
    int x;
    int y;
}

class b extends a {
    int y;
    int z;
}